# workspace2023

buf-example/: buf.gen.yaml
buf-example/proto/example/content/v1/: content.proto
buf-example/proto/example/user/v1/: user.proto
buf-hoge/3.buf-breaking/example/v1/: example.proto
chi-regex-sample/: go.mod  main.go
lua-extention-sample/: fib.go  go.mod  go.sum  hoge.lua  main.cpp  main.go
os-in-1000-lines/: common.c  common.h  kernel.c  run.sh
pino-custom-logger/: main.js  package-lock.json  package.json
protoc-gen-validate-issue-785/: buf.gen.yaml  example.proto  go.mod  go.sum  hoge.sh
test-ogp-dynamic-generation/: .gitignore  Cargo.toml  wrangler.toml
test-ogp-dynamic-generation/src/: lib.rs  r2.rs
wire_variadic_param/: go.mod
wire_variadic_param/cmd/: huga.go  main.go  wire.go
wire_variadic_param/provider/: provider.go  wire.go
