[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.29"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
